--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<div id="app"></div>
+<h1>Hello Tic-Tac-Toe!</h1>
+
+<table style="width:100%">
+	<tr>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+
+	<tr>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+	<tr>
+		<td></td>
+		<td></td>
+		<td></td>
+	</tr>
+</table>
