--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<h1>Hello Tic-Tac-Toe!</h1>
-
+<html>
+<style>
+  border:1px solid blck
+height:50 px
+width:50 px
 <table style="width:100%">
 	<tr>
 		<td>o</td>
