--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
-<html>
 <style>
-  border:1px solid blck
-height:50 px
-width:50 px
-<table style="width:100%">
+  td {
+    border: 1px solid black;
+    /* font-size: 50px; */
+    height: 50px;
+    /* line-height: 50px; */
+    /* text-align: center; */
+    width: 50px;
+  }
+</style>
+<table>
 	<tr>
-		<td>o</td>
-		<td>o</td>
-		<td>o</td>
+		<td class="O">
+      O
+		</td>
+		<td class="O">
+      O
+		</td>
+		<td class="O">
+      O
+		</td>
 	</tr>
-
 	<tr>
-		<td>x</td>
-		<td>x</td>
-		<td></td>
+		<td class="X">
+      X
+		</td>
+		<td class="X">
+      X
+		</td>
+		<td>
+		</td>
 	</tr>
 	<tr>
-		<td></td>
-		<td></td>
-		<td></td>
+		<td>
+		</td>
+		<td>
+		</td>
+		<td>
+		</td>
 	</tr>
 </table>
+
