--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <style>
   td {
     border: 1px solid black;
-    /* font-size: 50px; */
+     font-size: 50px;
     height: 50px;
-    /* line-height: 50px; */
+     line-height: 50px;
     /* text-align: center; */
     width: 50px;
   }
