--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <style>
-  td {
-    border: 1px solid black;
-     font-size: 50px;
-    height: 50px;
-     line-height: 50px;
-    /* text-align: center; */
-    width: 50px;
-  }
+	td {
+		border: 1px solid black;
+		font-size: 50px;
+		height: 50px;
+    line-height: 50px;
+		text-align: center; 
+		width: 50px
+	}
 </style>
 <table>
 	<tr>
 		<td class="O">
-      O
+			O
 		</td>
 		<td class="O">
-      O
+			O
 		</td>
 		<td class="O">
-      O
+			O
 		</td>
 	</tr>
 	<tr>
 		<td class="X">
-      X
+			X
 		</td>
 		<td class="X">
-      X
+			X
 		</td>
 		<td>
 		</td>
@@ -39,4 +39,3 @@
 		</td>
 	</tr>
 </table>
-
