--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     text-align: center;
     width: 50px;
   }
+  .O
+    {color: navy }
+
+  .X
+    {color: maroon}
+
+	.won {
+		background-color: yellow;
+	}
 </style>
 <table>
 	<tr>
