--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 </style>
 <table>
 	<tr>
-		<td class="O">
+		<td class="O won">
       O
 		</td>
-		<td class="O">
+		<td class="O won">
       O
 		</td>
-		<td class="O">
+		<td class="O won">
       O
 		</td>
 	</tr>
