--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     text-align: center;
     width: 50px;
   }
-  .O
-    {color: navy }
-
-  .X
-    {color: maroon}
-
-	.won {
-		background-color: yellow;
-	}
+  .O {
+    color: red;
+  }
+  .X {
+    color: blue;
+  }
+  .won {
+    background-color: yellow;
+  }
 </style>
 <table>
 	<tr>
@@ -43,3 +43,4 @@
 		</td>
 	</tr>
 </table>
+
