--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     width: 50px;
   }
   .O {
-    color: red;
+    color: red; background-color: yellow
   }
   .X {
     color: blue;
@@ -19,27 +19,27 @@
 </style>
 <table>
 	<tr>
-		<td>
+		<td id=a1>
 		</td>
-		<td>
+		<td id=a2>
 		</td>
-		<td>
-		</td>
-	</tr>
-	<tr>
-		<td>
-		</td>
-		<td>
-		</td>
-		<td>
+		<td id=a3>
 		</td>
 	</tr>
 	<tr>
-		<td>
+		<td id=b1>
 		</td>
-		<td>
+		<td id=b2>
 		</td>
-		<td>
+		<td id=b3>
+		</td>
+	</tr>
+	<tr>
+		<td id=c1>
+		</td>
+		<td id=c2>
+		</td>
+		<td id=c3>
 		</td>
 	</tr>
 </table>
