--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     width: 50px;
   }
   .O {
-    color: red; background-color: yellow
+    color: red; 
   }
   .X {
     color: blue;
@@ -17,30 +17,37 @@
     background-color: yellow;
   }
 </style>
+
+<h2> Tic Tac Toe Game </h2>
+
+<div id="winner" class="won"></div><p>
+
 <table>
 	<tr>
-		<td id=a1>
+		<td id="a1">
 		</td>
-		<td id=a2>
+		<td id="a2">
 		</td>
-		<td id=a3>
-		</td>
-	</tr>
-	<tr>
-		<td id=b1>
-		</td>
-		<td id=b2>
-		</td>
-		<td id=b3>
+		<td id="a3">
 		</td>
 	</tr>
 	<tr>
-		<td id=c1>
+		<td id="b1">
 		</td>
-		<td id=c2>
+		<td id="b2">
 		</td>
-		<td id=c3>
+		<td id="b3">
+		</td>
+	</tr>
+	<tr>
+		<td id="c1">
+		</td>
+		<td id="c2">
+		</td>
+    <td id="c3">
 		</td>
 	</tr>
 </table>
+
+
 
